- docs[#2.2]: 02_데이터_기반_서비스 DB 학습 체계 완전 마무리
- README.md: DB 학습 성과 반영 및 기술 스택 업데이트
- .gitignore: 캐시 파일 및 임시 파일 관리 체계 구축
- docs/changelog/database-learning-milestone-2025-08.md: DB 학습 마일스톤 기록
- 전체 문서 구조 정비로 DB 학습 단계 완전 마무리

#mysql #sqlite #python #chatgpt #sql #sql_4단계_학습_연동_완료
#문서화 #학습기반 #db완성 #db완성_향후_데이터_기반_AI_학습_준비_완료

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,16 @@
 # Python
 # ================================================
 __pycache__/
+# Python 캐시 파일들
+*.pyc
+*.pyo
+*.pyd
+#./선택_GenAI/05_LLM_data_services/02_데이터_기반_서비스/4/__pycache__/
+#./선택_GenAI/05_LLM_data_services/02_데이터_기반_서비스/4/__pycache__/session.cpython-313.pyc
+#./선택_GenAI/05_LLM_data_services/02_데이터_기반_서비스/4/__pycache__/db.cpython-313.pyc
+#./선택_GenAI/05_LLM_data_services/02_데이터_기반_서비스/3/__pycache__/
+#./선택_GenAI/05_LLM_data_services/02_데이터_기반_서비스/3/__pycache__/db.cpython-313.pyc
+#./선택_GenAI/05_LLM_data_services/.DS_Store
 *.py[cod]
 *$py.class
 *.so
@@ -62,6 +72,9 @@ GenAI-Learning-Journey.code-workspace
 # ================================================
 # macOS
 .DS_Store
+.DS_Store?
+# macOS 시스템 파일
+./선택_GenAI/05_LLM_data_services/.DS_Store
 .AppleDouble
 .LSOverride
 ._*
@@ -89,6 +102,11 @@ Desktop.ini
 *.pickle
 *.h5
 *.hdf5
+
+# SQLite 데이터베이스 파일 (실습용 임시 파일)
+test.db
+*.sqlite
+*.sqlite3
 
 # Numpy
 *.npy
@@ -186,5 +204,7 @@ examples/results/*.json
 # 대용량 실습 데이터
 examples/large_data/
 
-# 05_폴더 작업 중 (임시 보관)
-선택_GenAI/05_LLM_data_services/
+# 작업 완료된 부분은 제외에서 해제
+# 미작업 부분만 임시 제외(08-03)
+선택_GenAI/05_LLM_data_services/02_데이터_기반_서비스/5/
+선택_GenAI/05_LLM_data_services/06_LangChain_LangGraph/
