--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 annotated-types==0.7.0
 anyio==4.9.0
+beautifulsoup4==4.13.4
 certifi==2025.7.14
+charset-normalizer==3.4.2
 distro==1.9.0
+googlesearch-python==1.3.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -16,10 +19,13 @@ PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
+requests==2.32.4
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
 tabulate==0.9.0
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
+urllib3==2.5.0
